--- a/views/notFound.html
+++ b/views/notFound.html
@@ -1,7 +1,20 @@
+<!-- 
+    Convention for html attributes ordering
+    - ng-directives, href, src, id, class, data-attribute, others, aria-attributes, boolean attributes
+
+    FOR FORMS
+    - ng-directives, id, class, type, name, value, placeholder, aria-attributes, boolean attributes
+
+    CLASSES
+    - bootstrap class, custom class, width/height class, margin class, padding class
+ -->
+
+<!-- main container -->
 <div class="d-flex flex-column justify-content-center align-items-center gray-bg w-100 vh-100">
     <div class="image-container">
-        <img src="../assets/404-not-found.png" alt="empty_task" class="img-fluid">
+        <img src="../assets/404-not-found.png" class="img-fluid" alt="empty_task">
         <h1 class="responsive-title">Page not found</h1>
     </div>
     <a href="#!/" class="btn btn-primary action-buttons-layout">Go back</a>
 </div>
+<!-- end main container -->
