--- a/views/landing.html
+++ b/views/landing.html
@@ -1,51 +1,63 @@
-<div class="row mx-0 min-vh-100 first-row" ng-controller="LoginController">
+<!-- 
+    Convention for html attributes ordering
+    - ng-directives, href, src, id, class, data-attribute, others, aria-attributes, boolean attributes
 
+    FOR FORMS
+    - ng-directives, id, class, type, name, value, placeholder, aria-attributes, boolean attributes
+
+    CLASSES
+    - bootstrap class, custom class, width/height class, margin class, padding class
+ -->
+
+<!-- first row -->
+<div ng-controller="LoginController" class="row first-row min-vh-100 mx-0">
+    <!-- task and notes thumbnail -->
     <div class="order-xs-1 col-xs-12 col-lg-6 landing-page-intro px-0">
-      <div class="landing-page-backdrop"></div>
-      <div class="text-container pt-3 pb-4">
-        <h1 class="text-layout">Create your daily task</h1>
-        <h1 class="text-layout">and take notes</h1>
-      </div>
-      <div class="d-flex">
-        <div class="image-layout first-note">
-          <p id="image-title">Note</p>
-          <p id="content">Single or double quotation marks can be used on Python and JavaScript</p>
+        <div class="landing-page-backdrop"></div>
+        <div class="text-container pt-3 pb-4">
+            <h1 class="text-layout">Create your daily task</h1>
+            <h1 class="text-layout">and take notes</h1>
         </div>
-        <div class="image-layout second-note">
-          <p id="image-title">Note</p>
-          <p id="content">An arrow function in JavaScript does not have access to 'this' property</p>
+        <div class="d-flex">
+            <div class="image-layout first-note">
+                <p id="image-title">Note</p>
+                <p id="content">Single or double quotation marks can be used on Python and JavaScript</p>
+            </div>
+            <div class="image-layout second-note">
+                <p id="image-title">Note</p>
+                <p id="content">An arrow function in JavaScript does not have access to 'this' property</p>
+            </div>
+            <div class="image-layout first-task">
+                <p id="image-title">Task</p>
+                <p id="content">Create an ERD <br>for the database</p>
+            </div>
+            <div class="image-layout second-task">
+                <p id="image-title">Task</p>
+                <p id="content">Create a unit test for the new feature</p>
+            </div>
         </div>
-        <div class="image-layout first-task">
-          <p id="image-title">Task</p>
-          <p id="content">Create an ERD <br>for the database</p>
-        </div>
-        <div class="image-layout second-task">
-          <p id="image-title">Task</p>
-          <p id="content">Create a unit test for the new feature</p>
-        </div>
-      </div>
     </div>
+    <!-- end task and notes thumbnail -->
 
     <div class="order-xs-1 col-xs-12 col-lg-6 login-form-layout p-5">
-
-        <div aria-live="polite" aria-atomic="true" class="position-relative">
-            <div ng-if="loginError" class="toast-alert toast-alert-warning" ng-class="{'toast show': true, 'hide': loginError == null}" role="alert" aria-live="assertive" aria-atomic="true">
+        <!-- toast alert -->
+        <div class="position-relative" aria-live="polite" aria-atomic="true">
+            <div ng-if="loginError" ng-class="{'toast show': true, 'hide': loginError == null}" class="toast-alert toast-alert-warning" role="alert" aria-live="assertive" aria-atomic="true">
                 <div class="toast-header toast-header-warning">
                     <strong class="mr-auto">Login error</strong>
-                    <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
+                    <button class="ml-2 mb-1 close" type="button" data-dismiss="toast" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
                 <div class="toast-body">
                     {{ loginError }}
                 </div>
             </div>
-
-            <div ng-if="successMessage" class="toast-alert toast-alert-success" ng-class="{'toast show slide-right': true, 'hide': successMessage == null}" role="alert" aria-live="assertive" aria-atomic="true">
+            <div ng-if="successMessage" ng-class="{'toast show slide-right': true, 'hide': successMessage == null}" class="toast-alert toast-alert-success" role="alert" aria-live="assertive" aria-atomic="true">
                 <div class="toast-header toast-header-success">
                     <strong class="mr-auto">Success</strong>
-                    <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
+                    <button class="ml-2 mb-1 close" type="button" data-dismiss="toast" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
                 <div class="toast-body">
@@ -53,50 +65,51 @@
                 </div>
             </div>
         </div>
+        <!-- toast alert -->
 
-      <form ng-submit="loginUser()" name="loginForm" class="p-5 login-form" novalidate>
-        <h1 id="login-title">Login here</h1>
-        <div class="form-group">
-          <label for="username" class="username-password-label">Username</label>
-          <input ng-model="user.username" type="text" class="form-control" id="username" aria-describedby="emailHelp">
-        </div>
-        <div class="form-group">
-          <label for="password" class="username-password-label">Password</label>
-          <input ng-model="user.password" type="password" class="form-control" id="password">
-        </div>
-        <input type="submit" class="btn btn-primary" value="login">
-      </form>
+        <!-- login form -->
+        <form ng-submit="loginUser()" class="login-form p-5" name="loginForm" novalidate>
+            <h1 id="login-title">Login here</h1>
+            <div class="form-group">
+                <label class="username-password-label" for="username">Username</label>
+                <input ng-model="user.username" id="username" class="form-control" type="text">
+            </div>
+            <div class="form-group">
+                <label class="username-password-label" for="password">Password</label>
+                <input ng-model="user.password" id="password" class="form-control" type="password">
+            </div>
+            <input class="btn btn-primary" type="submit" value="login">
+        </form>
+        <!-- end login form -->
     </div>
-    
 </div>
+<!-- end first row -->
 
-<div class="row mx-0 min-vh-100">
-  <div class="d-flex flex-column justify-content-center align-items-center sign-up-here-layout">
-    <h2>Sign up here</h2>
-    <a href="#!/register" class="py-1">Register</a>
-    <div class="sign-up-here-image-layout sign-up-here-first-note">
-      <p id="sign-up-here-image-title">Notes</p>
-      <hr><hr><hr>
+<!-- second row -->
+<div class="row min-vh-100 mx-0">
+    <div class="d-flex flex-column justify-content-center align-items-center sign-up-here-layout">
+        <h2>Sign up here</h2>
+        <a href="#!/register" class="py-1">Register</a>
+        <div class="sign-up-here-image-layout sign-up-here-first-note">
+            <p id="sign-up-here-image-title">Notes</p>
+            <hr><hr><hr>
+        </div>
+        <div class="sign-up-here-image-layout sign-up-here-second-note">
+            <p id="sign-up-here-image-title">Notes</p>
+            <hr><hr><hr>
+        </div>
+        <div class="sign-up-here-image-layout sign-up-here-third-note">
+            <p id="sign-up-here-image-title">Notes</p>
+            <hr><hr><hr>
+        </div>
+        <div class="sign-up-here-image-layout sign-up-here-first-task">
+            <p id="sign-up-here-image-title">Task</p>
+            <hr><hr><hr>
+        </div>
+        <div class="sign-up-here-image-layout sign-up-here-second-task">
+            <p id="sign-up-here-image-title">Task</p>
+            <hr><hr><hr>
+        </div>
     </div>
-
-    <div class="sign-up-here-image-layout sign-up-here-second-note">
-      <p id="sign-up-here-image-title">Notes</p>
-      <hr><hr><hr>
-    </div>
-
-    <div class="sign-up-here-image-layout sign-up-here-third-note">
-      <p id="sign-up-here-image-title">Notes</p>
-      <hr><hr><hr>
-    </div>
-
-    <div class="sign-up-here-image-layout sign-up-here-first-task">
-      <p id="sign-up-here-image-title">Task</p>
-      <hr><hr><hr>
-    </div>
-
-    <div class="sign-up-here-image-layout sign-up-here-second-task">
-      <p id="sign-up-here-image-title">Task</p>
-      <hr><hr><hr>
-    </div>
-  </div>
 </div>
+<!-- end second row -->
