--- a/views/noteView.html
+++ b/views/noteView.html
@@ -1,59 +1,69 @@
-<div class="note-view-container d-flex flex-column justify-content-center align-items-center p-5 position-relative">
+<!-- 
+    Convention for html attributes ordering
+    - ng-directives, href, src, id, class, data-attribute, others, aria-attributes, boolean attributes
 
-    <div ng-if="noteErrorMessage" class="toast-alert toast-alert-warning" ng-class="{'toast show': true, 'hide': noteErrorMessage == null}" role="alert" aria-live="assertive" aria-atomic="true">
+    FOR FORMS
+    - ng-directives, id, class, type, name, value, placeholder, aria-attributes, boolean attributes
+
+    CLASSES
+    - bootstrap class, custom class, width/height class, margin class, padding class
+ -->
+
+<!-- main container -->
+<div class="d-flex flex-column justify-content-center align-items-center position-relative note-view-container p-5" aria-live="polite" aria-atomic="true">
+    <!-- toast alert -->
+    <div ng-if="noteErrorMessage" ng-class="{'toast show': true, 'hide': noteErrorMessage == null}" class="toast-alert toast-alert-warning" role="alert" aria-live="assertive" aria-atomic="true">
         <div class="toast-header toast-header-warning">
-          <strong class="mr-auto">Error</strong>
-          <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
+            <strong class="mr-auto">Error</strong>
+            <button class="close ml-2 mb-1" type="button" data-dismiss="toast" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
         </div>
         <div class="toast-body">
           {{ noteErrorMessage }}
         </div>
     </div>
-  
-    <div ng-if="noteDoesNotExistError" class="toast-alert toast-alert-warning" ng-class="{'toast show': true, 'hide': noteDoesNotExistError == null}" role="alert" aria-live="assertive" aria-atomic="true">
+    <div ng-if="noteDoesNotExistError" ng-class="{'toast show': true, 'hide': noteDoesNotExistError == null}" class="toast-alert toast-alert-warning" role="alert" aria-live="assertive" aria-atomic="true">
         <div class="toast-header toast-header-warning">
-          <strong class="mr-auto">Error</strong>
-          <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
+            <strong class="mr-auto">Error</strong>
+            <button class="close ml-2 mb-1" type="button" data-dismiss="toast" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
         </div>
         <div class="toast-body">
           {{ noteDoesNotExistError }}
         </div>
     </div>
+    <!-- end toast alert -->
 
-    <form class="note-view-form w-75 p-5 ">
-
-        <!-- <div class="d-flex justify-content-center align-items-center" aria-live="polite" aria-atomic="true" style="position: relative;">
-            
-        </div> -->
-
+    <!-- note view form -->
+    <form class="note-view-form w-75 p-5">
         <div class="form-group">
             <label for="title">Title</label>
-            <input ng-model="specificNote.title" type="text" class="form-control" id="title" ng-readonly="readOnly">
+            <input ng-model="specificNote.title" ng-readonly="readOnly" id="title" class="form-control" type="text">
         </div>
         <div class="form-group">
             <label for="description">Description</label>
-            <textarea ng-model="specificNote.content" class="form-control" id="description" placeholder="Enter content" ng-readonly="readOnly"></textarea>
+            <textarea ng-model="specificNote.content" ng-readonly="readOnly" id="description" class="form-control" placeholder="Enter content"></textarea>
         </div>
         <div class="form-group">
             <label for="color">Color</label>
             <select ng-model="specificNote.color" ng-init="specificNote.color = specificNote.color || ''" ng-disabled="readOnly" id="color" class="form-control">
-            <option value=""></option>
-            <option value="Green">Green</option>
-            <option value="Pink">Pink</option>
-            <option value="Red">Red</option>
-            <option value="White">White</option>
-            <option value="Yellow">Yellow</option>
+                <option value=""></option>
+                <option value="Green">Green</option>
+                <option value="Pink">Pink</option>
+                <option value="Red">Red</option>
+                <option value="White">White</option>
+                <option value="Yellow">Yellow</option>
             </select>
         </div>
         <div class="d-flex justify-content-sm-center justify-content-md-end">
             <button ng-click="toggleReadOnly()" class="btn btn-success ml-1">Edit</button>
-            <button ng-click="updateNote(specificNote.id)" type="submit" class="btn btn-primary ml-1" ng-disabled="readOnly">Save</button>
+            <button ng-click="updateNote(specificNote.id)" ng-disabled="readOnly" class="btn btn-primary ml-1" type="submit">Save</button>
             <button ng-click="goBackToPreviousRoute()" class="btn btn-danger ml-1">Cancel</button>
         </div>
     </form>
+    <!-- end note view form -->
 </div>
+<!-- end main container -->
 
