--- a/views/task.html
+++ b/views/task.html
@@ -1,100 +1,136 @@
+<!-- 
+    Convention for html attributes ordering
+    - ng-directives, href, src, id, class, data-attribute, others, aria-attributes, boolean attributes
+
+    FOR FORMS
+    - ng-directives, id, class, type, name, value, placeholder, aria-attributes, boolean attributes
+
+    CLASSES
+    - bootstrap class, custom class, width/height class, margin class, padding class
+ -->
+
+<!-- main container -->
 <div class="task-container">
-
-    <div aria-live="polite" aria-atomic="true" class="position-relative">
-        <div ng-if="errorMessage" class="toast-alert toast-alert-warning" ng-class="{'toast show': true, 'hide': errorMessage == null}" role="alert" aria-live="assertive" aria-atomic="true">
+    <!-- toast alert -->
+    <div class="position-relative" aria-live="polite" aria-atomic="true">
+        <div ng-if="errorMessage" ng-class="{'toast show': true, 'hide': errorMessage == null}" class="toast-alert toast-alert-warning" role="alert" aria-live="assertive" aria-atomic="true">
             <div class="toast-header toast-header-warning">
-            <strong class="mr-auto">Error</strong>
-            <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-            </button>
+                <strong class="mr-auto">Error</strong>
+                <button class="ml-2 mb-1 close" type="button" data-dismiss="toast" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
             </div>
             <div class="toast-body">
-            {{ errorMessage }}
+                {{ errorMessage }}
             </div>
         </div>
-
-        <div ng-if="successMessage" class="toast-alert toast-alert-success" ng-class="{'toast show': true, 'hide': successMessage == null}" role="alert" aria-live="assertive" aria-atomic="true">
+        <div ng-if="successMessage" ng-class="{'toast show': true, 'hide': successMessage == null}" class="toast-alert toast-alert-success" role="alert" aria-live="assertive" aria-atomic="true">
             <div class="toast-header toast-header-success">
-            <strong class="mr-auto">Operation success</strong>
-            <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-            </button>
+                <strong class="mr-auto">Operation success</strong>
+                <button class="ml-2 mb-1 close" type="button" data-dismiss="toast" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
             </div>
             <div class="toast-body">
-            {{ successMessage }}
+                {{ successMessage }}
             </div>
         </div>
     </div>
+    <!-- end toast alert -->
 
-    <div class="modal" tabindex="-1" id="deleteModal">
+    <!-- delete task modal -->
+    <div id="deleteModal" class="modal" tabindex="-1">
         <div class="modal-dialog delete-modal">
-        <div class="modal-content rounded-0">
-            <div class="modal-header">
-            <h5 class="modal-title">Confirm</h5>
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-            </button>
-            </div>
-            <div class="modal-body">
-            <p class="text-center">Are you sure you want to delete this task?</p>
-            </div>
-            <div class="modal-footer">
-                <button ng-click="confirmDelete=true; deleteTask()" type="button" class="btn btn-primary action-buttons-layout" data-dismiss="modal" >Yes</button>
-                <button ng-click="goBackToPreviousRoute()" type="button" class="btn btn-danger action-buttons-layout" data-dismiss="modal">Cancel</button>
-            </div>
-        </div>
-        </div>
-    </div>
-
-  <div class="row px-3 mx-3">
-
-    <div ng-show="emptyTask" class="d-flex flex-column justify-content-center align-items-center w-100 vh-100">
-        <div class="image-container">
-            <img src="../assets/empty-task.png" alt="empty_task" class="img-fluid">
-            <h1 class="responsive-title">You don't have tasks yet.</h1>
-        </div>
-    </div>
-
-    <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12 col-xs-12" ng-repeat="task in tasks | startFrom: (currentPage - 1) * pageSize | limitTo: pageSize">
-        <div ng-class="task.attributes.color" class="card-layout my-4 mx-2 p-4">
-            <h5>{{ task.attributes.title }}</h5>
-            <p>{{ task.attributes.description }}</p>
-            <p>Deadline: <time>{{ task.attributes.deadline }}</time></p>
-            <p>Active: {{ task.attributes.is_active }}</p>
-            <p>Created: <time>{{ task.attributes.created }}</time></p>
-            <p>Modified: <time>{{ task.attributes.modified }}</time></p>
-            <p ng-show="isAdmin == 'true' || isAdmin == true">User: {{ task.attributes.user }}</p>
-
-            <div class="d-flex justify-content-center button-container">
-            <a ng-hide="isAdmin == 'true' || isAdmin == true" href="#!/task/{{ task.id }}" class="btn btn-primary action-buttons-layout" title="More details"><i class='bx bx-dots-horizontal-rounded'></i></a>
-
-            <a ng-hide="isAdmin == 'true' || isAdmin == true" href="#!/task/delete/{{ task.id }}" class="btn btn-danger action-buttons-layout" title="Delete" data-toggle="modal" data-target="#deleteModal"><i class='bx bx-trash'></i></a>
-
-            <button ng-click="archiveTask(task.id)" ng-show="{{ task.attributes.is_active == true && (isAdmin == 'false' || isAdmin == false) }}" class="btn btn-warning action-buttons-layout" title="Archive"><i class='bx bx-archive-in'></i></button>
-
-            <button ng-click="activateTask(task.id)" ng-show="{{ task.attributes.is_active == false && (isAdmin == 'false' || isAdmin == false) }}" class="btn btn-info action-buttons-layout" title="Activate"><i class='bx bx-archive-out'></i></button>
+            <div class="modal-content rounded-0">
+                <div class="modal-header">
+                    <h5 class="modal-title">Confirm</h5>
+                    <button class="close" type="button" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <p class="text-center">Are you sure you want to delete this task?</p>
+                </div>
+                <div class="modal-footer">
+                    <button ng-click="confirmDelete=true; deleteTask()" class="btn btn-primary action-buttons-layout" type="button" data-dismiss="modal" >Yes</button>
+                    <button ng-click="goBackToPreviousRoute()" class="btn btn-danger action-buttons-layout" type="button" data-dismiss="modal">Cancel</button>
+                </div>
             </div>
         </div>
     </div>
+    <!-- end delete task modal -->
 
-    <nav aria-label="Task page navigation" class="fixed-bottom">
-        <ul class="pagination justify-content-center">
-            <li class="page-item">
-                <a class="page-link" ng-click="prevPage()">
-                    <span aria-hidden="true"><i class='bx bxs-chevron-left'></i></span>
-                </a>
-            </li>
-            <li class="page-item" ng-repeat="page in pages" ng-class="{ 'active-page': currentPage == page}" ng-click="setPage(page)"><a class="page-link">{{ page }}</a></li>
-            <li class="page-item">
-                <a class="page-link" ng-click="nextPage()">
-                    <span aria-hidden="true"><i class='bx bxs-chevron-right' ></i></span>
-                </a>
-            </li>
-        </ul>
-    </nav>
-  </div>
+    <!-- main content -->
+    <div class="row px-3 mx-3">
+        <!-- empty task -->
+        <div ng-show="emptyTask" class="d-flex flex-column justify-content-center align-items-center w-100 vh-100">
+            <div class="image-container">
+                <img src="../assets/empty-task.png" class="img-fluid" alt="empty_task">
+                <h1 class="responsive-title">You don't have tasks yet.</h1>
+            </div>
+        </div>
+        <!-- end empty task -->
 
+        <!-- tasks card -->
+        <div ng-repeat="task in tasks | startFrom: (currentPage - 1) * pageSize | limitTo: pageSize" class="col-xl-3 col-lg-4 col-md-6 col-sm-12 col-xs-12">
+            <div ng-class="task.attributes.color" class="card-layout my-4 mx-2 p-4">
+                <h5>{{ task.attributes.title }}</h5>
+                <p>{{ task.attributes.description }}</p>
+                <p>Deadline: <time>{{ task.attributes.deadline }}</time></p>
+                <p>Active: {{ task.attributes.is_active }}</p>
+                <p>Created: <time>{{ task.attributes.created }}</time></p>
+                <p>Modified: <time>{{ task.attributes.modified }}</time></p>
+                <p ng-show="isAdmin == 'true' || isAdmin == true">User: {{ task.attributes.user }}</p>
+                <div class="d-flex justify-content-center button-container">
+                    <a ng-hide="isAdmin == 'true' || isAdmin == true" href="#!/task/{{ task.id }}" class="btn btn-primary action-buttons-layout" title="More details">
+                        <i class="bx bx-dots-horizontal-rounded"></i>
+                    </a>
+                    <a ng-hide="isAdmin == 'true' || isAdmin == true" href="#!/task/delete/{{ task.id }}" class="btn btn-danger action-buttons-layout" title="Delete" data-toggle="modal" data-target="#deleteModal">
+                        <i class="bx bx-trash"></i>
+                    </a>
+                    <button ng-click="archiveTask(task.id)" ng-show="{{ task.attributes.is_active == true && (isAdmin == 'false' || isAdmin == false) }}" class="btn btn-warning action-buttons-layout" title="Archive">
+                        <i class="bx bx-archive-in"></i>
+                    </button>
+                    <button ng-click="activateTask(task.id)" ng-show="{{ task.attributes.is_active == false && (isAdmin == 'false' || isAdmin == false) }}" class="btn btn-info action-buttons-layout" title="Activate">
+                        <i class="bx bx-archive-out"></i>
+                    </button>
+                </div>
+            </div>
+        </div>
+        <!-- end tasks card -->
+
+        <!-- pagination -->
+        <nav class="fixed-bottom" aria-label="Task page navigation">
+            <ul class="pagination justify-content-center">
+                <li class="page-item">
+                    <a ng-click="prevPage()" class="page-link">
+                        <span aria-hidden="true">
+                            <i class="bx bxs-chevron-left"></i>
+                        </span>
+                    </a>
+                </li>
+                <li ng-repeat="page in pages" ng-class="{ 'active-page': currentPage == page}" ng-click="setPage(page)" class="page-item">
+                    <a class="page-link">{{ page }}</a>
+                </li>
+                <li class="page-item">
+                    <a ng-click="nextPage()" class="page-link">
+                        <span aria-hidden="true">
+                            <i class="bx bxs-chevron-right"></i>
+                        </span>
+                    </a>
+                </li>
+            </ul>
+        </nav>
+        <!-- end pagination -->
+    </div>
+    <!-- end main content -->
+
+    <!-- create task button -->
     <div class="d-flex justify-content-end">
-        <a ng-show="isAdmin == 'false' || isAdmin == false" href="#!/create-task" class="add-button"><i class='bx bx-plus-circle bx-flip-vertical' ></i></a>
+        <a ng-show="isAdmin == 'false' || isAdmin == false" href="#!/create-task" class="add-button">
+            <i class="bx bx-plus-circle bx-flip-vertical"></i>
+        </a>
     </div>
+    <!-- end create task button -->
 </div>
+<!-- end main container -->
